# FunnyServer

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
funnyserver/: __init__.py  __main__.py  response.py  server.py  utils.py
tests/: __init__.py
